==> Shaofuhw/PIC16F883-UltrasonicSensorHandler/Uart.c <==
#include "Uart.h"

char UART_Init(const long int baudrate)
{
	unsigned int x;
	x = (_XTAL_FREQ - baudrate*64)/(baudrate*64);
	if(x>255)
	{
		x = (_XTAL_FREQ - baudrate*16)/(baudrate*16);
		BRGH = 1;
	}
	if(x<256)
	{
          BRGH = 0;
	 SPBRG = x;
	 SYNC = 0;
	 SPEN = 1;
          TRISC7 = 1;
          TRISC6 = 0;
          TX9 = 0;
          CREN = 1;
          TXEN = 1;
	  return 1;
	}
	return 0;
}

char UART_TX_Empty()
{
  return TRMT;
}

char UART_Data_Ready()
{
   return RCIF;
}
char UART_Read()
{
 
  while(!RCIF);
  return RCREG;
}

void UART_Write(char data)
{
  while(!TRMT);
  TXREG = data;
}

void UART_Write_Text(char *text)
{
  int i;
  for(i=0;i<8;i++)
	  UART_Write(text[i]);
}
